--- a/10. Codificação/PortalOdonto/Views/Usuario/Cadastrar.cshtml
+++ b/10. Codificação/PortalOdonto/Views/Usuario/Cadastrar.cshtml
@@ -81,7 +81,7 @@
                             </div>
                             @Html.LabelFor(model => model.DataNascimento, htmlAttributes: new { @class = "control-label col-md-2" })
                             <div class="col-md-4">
-                                @Html.EditorFor(model => model.DataNascimento, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.EditorFor(model => model.DataNascimento, new { htmlAttributes = new { @class = "form-control date-mask", @type = "text" } })
                                 @Html.ValidationMessageFor(model => model.DataNascimento, "", new { @class = "text-danger" })
                             </div>
                             <div class="col-md-2"></div>
@@ -105,6 +105,5 @@
     </div>
 </div>
 
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
+
+
